# semi-open-messaging-groups

./: .gitignore  ARTIFACT-APPENDIX.md  CMakeLists.txt  Dockerfile  README.md  benchmark_table.py  benchmarks.json  benchmarks.sh  build.sh  install_libsodium.sh  run.sh
paper-data/: benchmarks.json
src/: base_point.cpp  base_point.hpp  batched_dleq.cpp  batched_dleq.hpp  dleq.cpp  dleq.hpp  dlog.cpp  dlog.hpp  dlog_to_gen.cpp  dlog_to_gen.hpp  fiat_shamir.cpp  fiat_shamir.hpp  keccak.cpp  keccak.hpp  main.cpp  parties.cpp  parties.hpp  protocol_run.cpp  protocol_run.hpp  random_permutation.cpp  random_permutation.hpp  repeated_sigma_protocol.cpp  repeated_sigma_protocol.hpp  shuffle_compatible_dleq.cpp  shuffle_compatible_dleq.hpp  shuffled_sigma_protocol.cpp  shuffled_sigma_protocol.hpp  sigma_protocol.hpp  test.cpp  trivial_zkproof.cpp  trivial_zkproof.hpp  utilities.cpp  utilities.hpp  verifiable_exponentiation.cpp  verifiable_exponentiation.hpp  zkproof.hpp
